<resources>
    <string name="app_name">basket-game</string>
    <string name="bienvenue_basket_game">Bienvenue Basket-Game</string>
    <string name="logo_basket_game">Logo Basket Game</string>
    <string name="nouvelle_partie">Nouvelle Partie</string>
    <string name="param_tres">Paramètres</string>
    <string name="lancer_la_partie">Lancer la partie</string>
    <string name="nombre_de_manches">Nombre de manches :</string>
    <string name="nombre_de_colonnes">Nombre de paniers :</string>
    <string name="temps_entre_chaque_tir">Temps entre chaque tour (en s) :</string>
    <string name="nom_de_l_quipe_2">Nom de l\'équipe 2</string>
    <string name="nom_de_l_quipe_1">Nom de l\'équipe 1</string>
    <string name="confirmer">Confirmer</string>
    <string name="_00">00</string>
    <string name="arr_ter_partie">Arrêter Partie</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="partie_interrompue">Partie Interrompue</string>
    <string name="recommencer_une_partie">Recommencer une partie</string>
    <string name="partie_termin_e">Partie Terminée</string>
    <string name="basket_game_suivi_partie">Partie</string>
    <string name="image_panier">image panier</string>
    <string name="image_t_l_vision">image télévision</string>
    <string name="image_chronom_tre">image chronomètre</string>
    <string-array name="nombreColonnes">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="nombreManches">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>