<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#181821" >

    <TextView
        android:id="@+id/bienvenue"
        android:layout_width="299dp"
        android:layout_height="204dp"
        android:gravity="center"
        android:text="@string/param_tres"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <EditText
        android:id="@+id/equipe1EditText"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/nom_de_l_quipe_1"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/equipe2EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/equipe2EditText"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:hint="@string/nom_de_l_quipe_2"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.422"
        android:inputType="text"
        android:autofillHints="" />


    <TextView
        android:id="@+id/tempsTirTextView"
        android:layout_width="256dp"
        android:layout_height="37dp"
        android:layout_marginTop="548dp"
        android:gravity="center"
        android:text="@string/temps_entre_chaque_tir"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/colonnesTextView"
        android:layout_width="285dp"
        android:layout_height="35dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/nombre_de_colonnes"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempsTirTextView" />

    <TextView
        android:id="@+id/manchesTextView"
        android:layout_width="296dp"
        android:layout_height="32dp"
        android:gravity="center"
        android:text="@string/nombre_de_manches"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colonnesTextView"
        app:layout_constraintVertical_bias="0.099" />

    <Button
        android:id="@+id/boutonLancerPartie"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:text="@string/lancer_la_partie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891" />

</androidx.constraintlayout.widget.ConstraintLayout>
