<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccueilActivity"
    android:background="#181821" >

    <TextView
        android:id="@+id/bienvenue"
        android:layout_width="299dp"
        android:layout_height="204dp"
        android:gravity="center"
        android:text="@string/bienvenue_basket_game"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/boutonNouvellePartie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/boutonNouvellePartie"
        android:layout_width="203dp"
        android:layout_height="74dp"
        android:text="@string/nouvelle_partie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boutonNouvellePartie"
        app:layout_constraintVertical_bias="0.509"
        app:srcCompat="@drawable/logo_basket_game_sans_fond"
        android:contentDescription="@string/logo_basket_game" />


</androidx.constraintlayout.widget.ConstraintLayout>
